--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <title>Comuna Casimcea</title>
 </head>
 <body>
-    <h2>Casimcea.</h2>
-    <h3>Cu viteza vantului.</h3>
-    <img src="pics/PXL_20220621_105837232.jpg" alt="1">
-    <img src="pics/PXL_20220622_110252920.jpg" alt="2">
-    <img src="pics/PXL_20220701_171940186.jpg" alt="3">
-    <img src="pics/PXL_20220701_172437610.jpg" alt="4">
-    <img src="pics/PXL_20220702_204153294.jpg" alt="5">
+    <h1>Casimcea.</h1>
+    <h2>Cu viteza vantului.</h2>
+    <div class="image-container">    
+        <img src="pics/PXL_20220621_105837232.jpg" alt="1">
+        <img src="pics/PXL_20220622_110252920.jpg" alt="2">
+        <img src="pics/PXL_20220701_171940186.jpg" alt="3">
+        <img src="pics/PXL_20220701_172437610.jpg" alt="4">
+        <img src="pics/PXL_20220702_204153294.jpg" alt="5">
+    </div>
 </body>
 </html>
