Add font awesome and Button CSS

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="style.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
     <script src="script.js" defer></script>
     <title>Comuna Casimcea</title>
 </head>
 <body>
     <h1>Casimcea.</h1>
     <h2>Cu viteza vantului.</h2>
+    <button class="nav-btn open-btn">
+        <i class="fas fa-bars"></i>
+    </button>
     <div class="image-container">    
         <img src="pics/PXL_20220621_105837232.jpg" alt="1">
         <img src="pics/PXL_20220622_110252920.jpg" alt="2">
