Add div for black red and white CSS

--- a/index.html
+++ b/index.html
@@ -13,9 +13,25 @@
 <body>
     <h1>Casimcea.</h1>
     <h2>Cu viteza vantului.</h2>
+
     <button class="nav-btn open-btn">
         <i class="fas fa-bars"></i>
     </button>
+
+    <div class="nav nav-black">
+        <div class="nav nav-red">
+            <div class="nav nav-white">
+            <button class="nav-btn close-btn">
+                <i class="fas fa-times"></i>
+            </button>
+            <ul class="list">
+                <li><a href="#">home</a></li>
+                <li><a href="#">settings</a></li>
+            </ul>
+            </div>
+        </div>
+    </div>
+
     <div class="image-container">    
         <img src="pics/PXL_20220621_105837232.jpg" alt="1">
         <img src="pics/PXL_20220622_110252920.jpg" alt="2">
