--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <i class="fas fa-bars"></i>
     </button>
 
-    <div class="nav nav-black">
+    <div class="nav nav-blue">
         <div class="nav nav-red">
-            <div class="nav nav-white">
+            <div class="nav nav-black">
             <button class="nav-btn close-btn">
                 <i class="fas fa-times"></i>
             </button>
