Add slider container

--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
             </div>
         </div>
     </div>
-
-    <div class="image-container">    
-        <img src="pics/PXL_20220621_105837232.jpg" alt="1">
-        <img src="pics/PXL_20220622_110252920.jpg" alt="2">
-        <img src="pics/PXL_20220701_171940186.jpg" alt="3">
-        <img src="pics/PXL_20220701_172437610.jpg" alt="4">
-        <img src="pics/PXL_20220702_204153294.jpg" alt="5">
+    <div class="slider-container">
+        <div class="image-container">    
+          <img src="pics/PXL_20220702_204153294.jpg" alt="5">
+          <img src="pics/PXL_20220621_105837232.jpg" alt="1">
+          <img src="pics/PXL_20220622_110252920.jpg" alt="2">
+          <img src="pics/PXL_20220701_171940186.jpg" alt="3">
+          <img src="pics/PXL_20220701_172437610.jpg" alt="4">
+        </div>
     </div>
 </body>
 </html>
