--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
           <img src="pics/PXL_20220701_171940186.jpg" alt="3">
           <img src="pics/PXL_20220701_172437610.jpg" alt="4">
         </div>
+        <button class="arrow left-arrow" id="left">
+          <i class="fas fa-arrow-left"></i>
+        </button>
+        <button class="arrow right-arrow" id="right">
+          <i class="fas fa-arrow-right"></i>
+        </button>
     </div>
 </body>
 </html>
