Add proper slide CSS, first image shows up as active

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     </div>
     <div class="slider-container">
         <div class="image-container">    
-          <div class="slide active"><img src="pics/PXL_20220702_204153294.jpg" alt="5"></div>
-          <div class="slide"><img src="pics/PXL_20220621_105837232.jpg" alt="1"></div>
-          <div class="slide"><img src="pics/PXL_20220622_110252920.jpg" alt="2"></div>
-          <div class="slide"><img src="pics/PXL_20220701_171940186.jpg" alt="3"></div>
-          <div class="slide"><img src="pics/PXL_20220701_172437610.jpg" alt="4"></div>
+          <div class="slide active" style="background-image:url('pics/PXL_20220702_204153294.jpg')"></div>
+          <div class="slide" style="background-image:url('pics/PXL_20220621_105837232.jpg')"></div>
+          <div class="slide" style="background-image:url('pics/PXL_20220622_110252920.jpg')"></div>
+          <div class="slide" style="background-image:url('pics/PXL_20220701_171940186.jpg')"></div>
+          <div class="slide" style="background-image:url('pics/PXL_20220701_172437610.jpg')"></div>
         </div>
         <button class="arrow left-arrow" id="left">
           <i class="fas fa-arrow-left"></i>
