--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </button>
             <ul class="list">
                 <li><a href="#">home</a></li>
-                <li><a href="#">about</a></li>
+                <li><a href="about/about.html">about</a></li>
             </ul>
             </div>
         </div>
