--- a/about/about.html
+++ b/about/about.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    test
+    <div class="container">
+      <h2>autor: Virgil Lungu</h2>
+      <h3>data: 9 iulie 2022 - ?</h3>
+    </div>
 </body>
 </html>
