--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <i class="fas fa-times"></i>
             </button>
             <ul class="list">
-                <li><a href="#">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="about/about.html">about</a></li>
             </ul>
             </div>
