--- a/about/about.html
+++ b/about/about.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
       <h2>autor: Virgil Lungu</h2>
       <h3>data: 9 iulie 2022 - ?</h3>
-    </div>
 </body>
 </html>
