--- a/index.html
+++ b/index.html
@@ -33,11 +33,16 @@
     </div>
     <div class="slider-container">
         <div class="image-container">    
-          <div class="slide active" style="background-image:url('pics/PXL_20220702_204153294.jpg')"></div>
+          <div class="slide active" style="background-image:url('pics/PXL_20220702_204153294.jpg')">
+            <div class="info">
+                <h3>Casimcea - o localitate aflata in Dobrogea.</h3>
+            </div>
+        </div>
           <div class="slide" style="background-image:url('pics/PXL_20220621_105837232.jpg')"></div>
           <div class="slide" style="background-image:url('pics/PXL_20220622_110252920.jpg')"></div>
           <div class="slide" style="background-image:url('pics/PXL_20220701_171940186.jpg')"></div>
-          <div class="slide" style="background-image:url('pics/PXL_20220701_172437610.jpg')"></div>
+          <div class="slide" style="background-image:url('pics/PXL_20220701_172437610.jpg')"></div> 
+          <div class="slide" style="background-image:url('pics/PXL_20220707_181326486.jpg')"></div>
         </div>
         <button class="arrow left-arrow" id="left">
           <i class="fas fa-arrow-left"></i>
