Add info h3 text

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="slider-container">
         <div class="image-container">    
           <div class="slide active" style="background-image:url('pics/PXL_20220702_204153294.jpg')">
-            <div class="info">
-                <h3>Casimcea - o localitate aflata in Dobrogea.</h3>
+            <div class="info">  
+                <h3>O localitate aflata in Dobrogea.</h3>
             </div>
         </div>
           <div class="slide" style="background-image:url('pics/PXL_20220621_105837232.jpg')"></div>
