Define async getWeather function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Casimcea.</h1>
-    <h2>Cu viteza vantului.</h2>
+    <h2>Cu viteza vantului, din 1543.</h2>
 
     <button class="nav-btn open-btn">
         <i class="fas fa-bars"></i>
