--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                 <h3>O localitate aflata in Dobrogea.</h3>
             </div>
         </div>
-          <div class="slide" style="background-image:url('pics/PXL_20220621_105837232.jpg')"></div>
+          <div class="slide" style="background-image:url('pics/PXL_20220621_105837232.jpg')">
+            <div class="info">  
+                <h3>.</h3>
+            </div>
           <div class="slide" style="background-image:url('pics/PXL_20220622_110252920.jpg')"></div>
           <div class="slide" style="background-image:url('pics/PXL_20220701_171940186.jpg')"></div>
           <div class="slide" style="background-image:url('pics/PXL_20220701_172437610.jpg')"></div> 
@@ -51,5 +54,6 @@
           <i class="fas fa-arrow-right"></i>
         </button>
     </div>
+    <div class="weather" id="weather"> vremea acum:</div>
 </body>
 </html>
