add weather link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </button>
             <ul class="list">
                 <li><a href="index.html">home</a></li>
+                <li><a href="https://vremea.ido.ro/Corugea~680678.htm" target="_blank">vremea</a></li>
                 <li><a href="about/about.html">about</a></li>
             </ul>
             </div>
@@ -35,17 +36,33 @@
         <div class="image-container">    
           <div class="slide active" style="background-image:url('pics/PXL_20220702_204153294.jpg')">
             <div class="info">  
-                <h3>O localitate aflata in Dobrogea.</h3>
+                <h3>O localitate aflata in Dobrogea - fondata in timpul Imperiului Otoman.</h3>
             </div>
         </div>
           <div class="slide" style="background-image:url('pics/PXL_20220621_105837232.jpg')">
             <div class="info">  
-                <h3>.</h3>
+                <h3>Cu o istorie de aproape 600 de ani.</h3>
             </div>
-          <div class="slide" style="background-image:url('pics/PXL_20220622_110252920.jpg')"></div>
-          <div class="slide" style="background-image:url('pics/PXL_20220701_171940186.jpg')"></div>
-          <div class="slide" style="background-image:url('pics/PXL_20220701_172437610.jpg')"></div> 
-          <div class="slide" style="background-image:url('pics/PXL_20220707_181326486.jpg')"></div>
+            </div>
+          <div class="slide" style="background-image:url('pics/PXL_20220622_110252920.jpg')">
+            <div class="info">  
+                <h3>Un popas pe drumul catre mare.</h3>
+            </div>
+         </div>
+          <div class="slide" style="background-image:url('pics/PXL_20220701_171940186.jpg')">
+            <div class="info">  
+                <h3>Locul de nastere al lui Ion Jalea.</h3>
+            </div>
+        </div>
+          <div class="slide" style="background-image:url('pics/PXL_20220701_172437610.jpg')">
+            <div class="info">  
+                <h3>Cu energia vantului spre viitor.</h3>
+            </div>
+        </div> 
+          <div class="slide" style="background-image:url('pics/PXL_20220707_181326486.jpg')">
+            <div class="info">  
+                <h3>Bine ati venit la Casimcea.</h3>
+            </div>
         </div>
         <button class="arrow left-arrow" id="left">
           <i class="fas fa-arrow-left"></i>
@@ -54,6 +71,5 @@
           <i class="fas fa-arrow-right"></i>
         </button>
     </div>
-    <div class="weather" id="weather"> vremea acum:</div>
 </body>
 </html>
