--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <button class="nav-btn open-btn">
         <i class="fas fa-bars"></i>
     </button>
-
+    <div>
+        <button class="wiki">info</button>
+    </div>
     <div class="nav nav-blue">
         <div class="nav nav-red">
             <div class="nav nav-black">
