Add js function to info button to link to wiki page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button class="nav-btn open-btn">
         <i class="fas fa-bars"></i>
     </button>
-    <div class="wiki-div">
+    <div class="wiki-div" id="info">
         <button class="wiki">info</button>
     </div>
     <div class="nav nav-blue">
