Create two buttons for RO and EN language

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <button class="nav-btn open-btn">
         <i class="fas fa-bars"></i>
     </button>
+    
+    <div class="lang">
+        <button class="ro">RO</button>
+        <button class="en">EN</button>
+    </div>
+
     <div class="wiki-div" id="info">
         <button class="wiki">info</button>
     </div>
