Create page in English

--- a/about/about.html
+++ b/about/about.html
@@ -10,5 +10,6 @@
 <body>
       <h2>autor: Virgil Lungu</h2>
       <h3>data: 9 iulie 2022 - ?</h3>
+      <h4>Acest proiect a fost realizat utilizand HTML, CSS si JavaScript.</h4>
 </body>
 </html>
