Add style.css and script.js to en page

--- a/en/index.html
+++ b/en/index.html
@@ -42,32 +42,32 @@
     </div>
     <div class="slider-container">
         <div class="image-container">    
-          <div class="slide active" style="background-image:url('pics/PXL_20220702_204153294.jpg')">
+          <div class="slide active" style="background-image:url('../pics/PXL_20220702_204153294.jpg')">
             <div class="info">  
                 <h3>Founded during Ottoman times, a place in Dobruja.</h3>
             </div>
         </div>
-          <div class="slide" style="background-image:url('pics/PXL_20220621_105837232.jpg')">
+          <div class="slide" style="background-image:url('../pics/PXL_20220621_105837232.jpg')">
             <div class="info">  
                 <h3>Six hundred years of history.</h3>
             </div>
             </div>
-          <div class="slide" style="background-image:url('pics/PXL_20220622_110252920.jpg')">
+          <div class="slide" style="background-image:url('../pics/PXL_20220622_110252920.jpg')">
             <div class="info">  
                 <h3>Catch a break on your way to the Black Sea.</h3>
             </div>
          </div>
-          <div class="slide" style="background-image:url('pics/PXL_20220701_171940186.jpg')">
+          <div class="slide" style="background-image:url('../pics/PXL_20220701_171940186.jpg')">
             <div class="info">  
                 <h3>Ion Jalea's birth place.</h3>
             </div>
         </div>
-          <div class="slide" style="background-image:url('pics/PXL_20220701_172437610.jpg')">
+          <div class="slide" style="background-image:url('../pics/PXL_20220701_172437610.jpg')">
             <div class="info">  
                 <h3>Unleashing wind energy towards the future.</h3>
             </div>
         </div> 
-          <div class="slide" style="background-image:url('pics/PXL_20220707_181326486.jpg')">
+          <div class="slide" style="background-image:url('../pics/PXL_20220707_181326486.jpg')">
             <div class="info">  
                 <h3>Welcome to Casimcea.</h3>
             </div>
