--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Comuna Casimcea</title>
     <link href="style.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
     <script src="script.js" defer></script>
@@ -17,7 +17,7 @@
     <button class="nav-btn open-btn">
         <i class="fas fa-bars"></i>
     </button>
-    
+
     <div class="lang">
         <button class="ro">RO</button>
         <button class="en">EN</button>
