Add proper index file to ro button on en page

--- a/en/index.html
+++ b/en/index.html
@@ -34,7 +34,7 @@
             </button>
             <ul class="list">
                 <li><a href="index.html">home</a></li>
-                <li><a href="https://vremea.ido.ro/Corugea~680678.htm" target="_blank">vremea</a></li>
+                <li><a href="https://vremea.ido.ro/Corugea~680678.htm" target="_blank">weather</a></li>
                 <li><a href="about/about.html">about</a></li>
             </ul>
             </div>
