add hover info to english page documenting info button redirecting to a Romanian webpage

--- a/en/index.html
+++ b/en/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="wiki-div" id="info">
-        <button class="wiki">info</button>
+        <button class="wiki" title="Redirects to a Romanian webpage.">info*</button>
     </div>
     <div class="nav nav-blue">
         <div class="nav nav-red">
@@ -78,6 +78,7 @@
         <button class="arrow right-arrow" id="right">
           <i class="fas fa-arrow-right"></i>
         </button>
+        </div>
     </div>
 </body>
 </html>
