--- a/about/about.html
+++ b/about/about.html
@@ -8,8 +8,11 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="slide">
+        <img src="../pics/PXL_20220702_204153294.jpg" alt="image">
       <h2>autor: Virgil Lungu</h2>
       <h3>data: 9 iulie 2022 - ?</h3>
       <h4>Acest proiect a fost realizat utilizand HTML, CSS si JavaScript.</h4>
+    </div>
 </body>
 </html>
