Add proper ion jalea pic

--- a/about/about.html
+++ b/about/about.html
@@ -10,9 +10,11 @@
 <body>
     <div class="slide">
         <img src="../pics/PXL_20220702_204153294.jpg" alt="image">
+        <div class="info">
       <h2>autor: Virgil Lungu</h2>
       <h3>data: 9 iulie 2022 - ?</h3>
       <h4>Acest proiect a fost realizat utilizand HTML, CSS si JavaScript.</h4>
+        </div>
     </div>
 </body>
 </html>
