--- a/en/index.html
+++ b/en/index.html
@@ -49,22 +49,27 @@
         </div>
           <div class="slide" style="background-image:url('../pics/PXL_20220621_105837232.jpg')">
             <div class="info">  
-                <h3>Six hundred years of history.</h3>
+                <h3>Unleashing wind energy towards the future.</h3>
+                </div>
             </div>
-            </div>
+         <div class="slide" style="background-image:url('../pics/PXL_20220403_084657184.jpg')">
+                <div class="info">  
+                    <h3>Near the keys of Dobruja.</h3>
+                </div>
+              </div>
           <div class="slide" style="background-image:url('../pics/PXL_20220622_110252920.jpg')">
             <div class="info">  
                 <h3>Catch a break on your way to the Black Sea.</h3>
             </div>
          </div>
-          <div class="slide" style="background-image:url('../pics/PXL_20220701_171940186.jpg')">
+          <div class="slide" style="background-image:url('../pics/bust_tata_jalea_casimcea-196.webp')">
             <div class="info">  
                 <h3>Ion Jalea's birth place.</h3>
             </div>
         </div>
           <div class="slide" style="background-image:url('../pics/PXL_20220701_172437610.jpg')">
             <div class="info">  
-                <h3>Unleashing wind energy towards the future.</h3>
+                <h3>Six hundred years of history.</h3>
             </div>
         </div> 
           <div class="slide" style="background-image:url('../pics/PXL_20220707_181326486.jpg')">
