--- a/index.html
+++ b/index.html
@@ -49,22 +49,28 @@
         </div>
           <div class="slide" style="background-image:url('pics/PXL_20220621_105837232.jpg')">
             <div class="info">  
-                <h3>Cu o istorie de aproape 600 de ani.</h3>
+                <h3>Cu energia vantului spre viitor.</h3>
             </div>
+            </div>
+         <div class="slide" style="background-image:url('pics/PXL_20220403_084657184.jpg')">
+              <div class="info">  
+                  <h3>In apropiere de cheile Dobrogei.</h3>
+              </div>
             </div>
           <div class="slide" style="background-image:url('pics/PXL_20220622_110252920.jpg')">
             <div class="info">  
                 <h3>Un popas pe drumul catre mare.</h3>
             </div>
          </div>
-          <div class="slide" style="background-image:url('pics/PXL_20220701_171940186.jpg')">
+          <div class="slide" style="background-image:url('pics/bust_tata_jalea_casimcea-196.webp')">
             <div class="info">  
                 <h3>Locul de nastere al lui Ion Jalea.</h3>
             </div>
         </div>
+      </div>
           <div class="slide" style="background-image:url('pics/PXL_20220701_172437610.jpg')">
             <div class="info">  
-                <h3>Cu energia vantului spre viitor.</h3>
+                <h3>Cu o istorie de aproape 600 de ani.</h3>
             </div>
         </div> 
           <div class="slide" style="background-image:url('pics/PXL_20220707_181326486.jpg')">
