Add info in english

--- a/about/about.html
+++ b/about/about.html
@@ -15,6 +15,7 @@
         <h2>autor: Virgil Lungu</h2>
         <h3>data: 9 iulie 2022 - 14 iulie 2022</h3>
         <h4>Acest proiect a fost realizat utilizand HTML, CSS si JavaScript.</h4>
+        <h4>This project was made using just HTML, CSS and JavaScript plus the Font Awesome CDN. No additional framework was used.</h4>
     </div>
 </body>
 </html>
