Make final changes

--- a/en/index.html
+++ b/en/index.html
@@ -35,7 +35,7 @@
             <ul class="list">
                 <li><a href="index.html">home</a></li>
                 <li><a href="https://vremea.ido.ro/Corugea~680678.htm" target="_blank">weather</a></li>
-                <li><a href="about/about.html">about</a></li>
+                <li><a href="../about/about.html" target="_blank">about</a></li>
             </ul>
             </div>
         </div>
